--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
     ],
     "require": {
         "php": "^8.1",
-        "contao/core-bundle": "^4.13",
+        "contao/core-bundle": "^4.13 || ^5.3",
         "contao/manager-plugin": "^2.3.1",
         "doctrine/dbal": "^3.3",
         "symfony/config": "^5.4 || ^6.0",
