--- a/composer.json
+++ b/composer.json
@@ -23,11 +23,11 @@
         "contao/core-bundle": "^4.13 || ^5.3",
         "contao/manager-plugin": "^2.3.1",
         "doctrine/dbal": "^3.3",
-        "symfony/config": "^5.4 || ^6.0",
-        "symfony/dependency-injection": "^5.4 || ^6.0",
-        "symfony/http-foundation": "^5.4 || ^6.0",
-        "symfony/http-kernel": "^5.4 || ^6.0",
-        "symfony/routing": "^5.4 || ^6.0",
+        "symfony/config": "^5.4 || ^6.0 || ^7.0",
+        "symfony/dependency-injection": "^5.4 || ^6.0 || ^7.0",
+        "symfony/http-foundation": "^5.4 || ^6.0 || ^7.0",
+        "symfony/http-kernel": "^5.4 || ^6.0 || ^7.0",
+        "symfony/routing": "^5.4 || ^6.0 || ^7.0",
         "twig/twig": "^3.0"
     },
     "require-dev": {
